--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,3 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -141,35 +99,31 @@ li {
 }
 
 #Green {
-  box-shadow: 15px -20px 15px #38be314d
+  box-shadow: 15px -20px 15px green
 }
 
 #Red {
-  box-shadow: 15px -20px 15px #be2a2a4d
+  box-shadow: 15px -20px 15px red
 }
 
 #Blue {
-  box-shadow: 15px -20px 15px #201ba84d
+  box-shadow: 15px -20px 15px blue
 }
 
 #Purple {
-  box-shadow: 15px -20px 15px #6443b79c
+  box-shadow: 15px -20px 15px purple
 }
 
 #Yellow {
-  box-shadow: 15px -20px 15px #c7ba274d
+  box-shadow: 15px -20px 15px Yellow
 }
 
 #Orange {
-  box-shadow: 15px -20px 15px #fa751685
+  box-shadow: 15px -20px 15px orange
 }
 
 #Pink {
-  box-shadow: 15px -20px 15px #b82bac81
-}
-
-#Rainbow {
-  box-shadow: 7px -5px 10px #4c0082b6,11px -9px 10px #0000ff71,16px -14px 10px #00ff007d,20px -17px 10px #ffff0093,24px -19px 10px #ff8000d7,27px -23px 10px #eb1818af,5px 5px 15px 5px #0000
+  box-shadow: 15px -20px 15px pink
 }
 
 :root {
